# gen-ai-hands-on

./: .gitignore  main.py  pyproject.toml
1.models/: 1.open_source_model.py  2.1.hugging_face_model.py  2.2.hugging_face_model.py  3.1.databricks_model.py  3.2.google_model.py  info.md
2.parser/: 1.string_parser.py  2.structured_output.py  3.pydantic_parser.py  info.md
3.prompts/: 1.simple_template.py  2.chat_template.py  3.chatbot_without_memory.py  4.chatbot_with_memory.py  5.chatbot_no_memory_with_prompt_template.py  6.chatbot_with_memory_with_prompt_template.py  info.md
4.runnables/: 1.sequential_runnable.py  2.parallel_runnable.py  3.passthrough_runnable.py  4.conditional_runnable.py
5.tools/: 1.tool_decorator.py  3.built_in_tool.py  4.tool_calling_with_llm.py  5.dummy_tools.py  info.md
6.agents/: agent_with_tool_1.py  agent_with_tool_2.py
7.rag/: info.md
7.rag/1.document_loaders/: pdf_loader.py
7.rag/3.vector_store/: chromadb_store.py
